# textual-enhanced

./: 404.html  ChangeLog.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: code-checks.yaml  style-and-lint.yaml
command_system/: index.html
dialogs/: index.html
library-contents/app/: index.html
library-contents/binding/: index.html
library-contents/commands/: index.html
library-contents/containers/: index.html
library-contents/dialogs/: index.html
library-contents/screen/: index.html
library-contents/tools/: index.html
library-contents/widgets/: index.html
search/: search_index.json
src/textual_enhanced/: __main__.py  app.py  binding.py  containers.py  screen.py
src/textual_enhanced/commands/: __init__.py  bindings.py  command.py  common.py  provider.py
src/textual_enhanced/dialogs/: __init__.py  confirm.py  help.py
src/textual_enhanced/tools/: add_key_name.py  history.py
tests/: test_history.py
