[project]
name = "textual-enhanced"
version = "0.0.1"
description = "A library of mildly-opinionated enhancements to Textual"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "textual-dev>=1.7.0",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_enhanced"]
